Added MusicBrainz toolbar to view album matches and all artist albums
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6713 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -5243,6 +5243,10 @@ BEGIN
     ID_SHAREMONKEY_PRICES   "Look at the prices for the current match"
     ID_SHAREMONKEY_COMPARE  "Compare prices in different stores"
     ID_SHAREMONKEY_BUY      "Buy it and support the author"
+    ID_WEBSERVICES_MUSICBRAINZ 
+                            "Search for the same artist songs using MusicBrainz service."
+    ID_MUSICBRAINZ_MATCHES  "Search for albums matching the selected file."
+    ID_MUSICBRAINZ_ALBUMS   "Look at all albums for this artist."
 END
 
 #endif    // English (Australia) resources
