Whoops, didn't save embedding in the debug build
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6726 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/skin-installer.vcproj
+++ b/vc8_0/skin-installer.vcproj
@@ -78,7 +78,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				EmbedManifest="false"
+				EmbedManifest="true"
 				AssemblyIdentity="Shareaza.SkinInstaller, processorArchitecture=x86, version=1.0.12.5, type=win32"
 				InputResourceManifests="$(OutDir)Skin.exe"
 			/>
