--- a/vc8_0/skin-installer.vcproj
+++ b/vc8_0/skin-installer.vcproj
@@ -70,6 +70,7 @@
 				AdditionalDependencies="comctl32.lib unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
 				OutputFile="$(OutDir)Skin.exe"
 				GenerateManifest="true"
+				AdditionalManifestDependencies="type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; processorArchitecture=&apos;x86&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos;"
 				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				GenerateDebugInformation="true"
 			/>
@@ -78,7 +79,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				EmbedManifest="true"
+				AdditionalManifestFiles="$(IntDir)\$(TargetFileName).intermediate.manifest"
 				AssemblyIdentity="Shareaza.SkinInstaller, processorArchitecture=x86, version=1.0.12.5, type=win32"
 				InputResourceManifests="$(OutDir)Skin.exe"
 			/>
@@ -234,7 +235,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
 				OutputFile="$(OutDir)Skin.exe"
-				GenerateManifest="true"
+				AdditionalManifestDependencies="type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; processorArchitecture=&apos;x86&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos;"
 				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -245,6 +246,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="$(IntDir)\$(TargetFileName).intermediate.manifest"
 				EmbedManifest="true"
 				AssemblyIdentity="Shareaza.SkinInstaller, processorArchitecture=x86, version=1.0.12.5, type=win32"
 				InputResourceManifests="$(OutDir)Skin.exe"
@@ -456,10 +458,6 @@
 			</File>
 			<File
 				RelativePath="..\skin-installer\res\skin.ico"
-				>
-			</File>
-			<File
-				RelativePath="..\skin-installer\res\skin.xml"
 				>
 			</File>
 		</Filter>
