--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -88,7 +88,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="wininet.lib msi.lib iphlpapi.lib unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
 				OutputFile="$(OutDir)$(ProjectName).exe"
-				GenerateManifest="false"
+				AdditionalManifestDependencies="type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; processorArchitecture=&apos;x86&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos;"
 				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
@@ -98,6 +98,9 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="$(IntDir)\$(TargetFileName).intermediate.manifest"
+				AssemblyIdentity="Shareaza.Shareaza, processorArchitecture=x86, version=2.3.1.2, type=win32"
+				InputResourceManifests="$(OutDir)$(ProjectName).exe"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -185,7 +188,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="wininet.lib msi.lib iphlpapi.lib version.lib winmm.lib"
 				OutputFile="$(OutDir)$(ProjectName).exe"
-				GenerateManifest="false"
+				AdditionalManifestDependencies="type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; processorArchitecture=&apos;amd64&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos;"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
 			/>
@@ -194,6 +197,9 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="$(IntDir)\$(TargetFileName).intermediate.manifest"
+				AssemblyIdentity="Shareaza.Shareaza, processorArchitecture=amd64, version=2.3.1.2, type=win32"
+				InputResourceManifests="$(OutDir)$(ProjectName).exe"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -280,6 +286,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="wininet.lib msi.lib iphlpapi.lib unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
 				OutputFile="$(OutDir)$(ProjectName).exe"
+				AdditionalManifestDependencies="type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; processorArchitecture=&apos;x86&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos;"
 				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -290,6 +297,9 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="$(IntDir)\$(TargetFileName).intermediate.manifest"
+				AssemblyIdentity="Shareaza.Shareaza, processorArchitecture=x86, version=2.3.1.2, type=win32"
+				InputResourceManifests="$(OutDir)$(ProjectName).exe"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -375,6 +385,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="wininet.lib msi.lib iphlpapi.lib version.lib winmm.lib"
 				OutputFile="$(OutDir)$(ProjectName).exe"
+				AdditionalManifestDependencies="type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; processorArchitecture=&apos;amd64&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos;"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
@@ -385,6 +396,9 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				AdditionalManifestFiles="$(IntDir)\$(TargetFileName).intermediate.manifest"
+				AssemblyIdentity="Shareaza.Shareaza, processorArchitecture=amd64, version=2.3.1.2, type=win32"
+				InputResourceManifests="$(OutDir)$(ProjectName).exe"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
