Signing manifest for release builds
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6732 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -298,7 +298,7 @@
 			<Tool
 				Name="VCManifestTool"
 				AdditionalManifestFiles="$(IntDir)\$(TargetFileName).intermediate.manifest"
-				AssemblyIdentity="Shareaza.Shareaza, processorArchitecture=x86, version=2.3.1.2, type=win32"
+				AssemblyIdentity="Shareaza.Shareaza, processorArchitecture=x86, version=2.3.1.2, type=win32, publicKeyToken=ba3b397e6792377b"
 				InputResourceManifests="$(OutDir)$(ProjectName).exe"
 			/>
 			<Tool
@@ -318,6 +318,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing $(TargetFileName)..."
+				CommandLine="mt.exe -updateresource:&quot;$(OutDir)$(ProjectName).exe&quot; -snk:&quot;$(InputDir)..\$(ProjectName)\Shareaza.snk&quot; -nologo"
 			/>
 		</Configuration>
 		<Configuration
@@ -397,7 +399,7 @@
 			<Tool
 				Name="VCManifestTool"
 				AdditionalManifestFiles="$(IntDir)\$(TargetFileName).intermediate.manifest"
-				AssemblyIdentity="Shareaza.Shareaza, processorArchitecture=amd64, version=2.3.1.2, type=win32"
+				AssemblyIdentity="Shareaza.Shareaza, processorArchitecture=amd64, version=2.3.1.2, type=win32, publicKeyToken=ba3b397e6792377b"
 				InputResourceManifests="$(OutDir)$(ProjectName).exe"
 			/>
 			<Tool
@@ -417,6 +419,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="Signing $(TargetFileName)..."
+				CommandLine="mt.exe -updateresource:&quot;$(OutDir)$(ProjectName).exe&quot; -snk:&quot;$(InputDir)..\$(ProjectName)\Shareaza.snk&quot; -nologo"
 			/>
 		</Configuration>
 	</Configurations>
